--- a/libgo/CMakeLists.txt
+++ b/libgo/CMakeLists.txt
@@ -72,8 +72,12 @@ add_subdirectory(godumpspec)
 #......................................................................
 
 # Driver for compiling *.go files.
-get_target_property(driverdir llvm-goc RUNTIME_OUTPUT_DIRECTORY)
-set(gollvm_driver "${driverdir}/llvm-goc")
+if (GOLLVM_DRIVER_DIR)
+  set(gollvm_driver "${GOLLVM_DRIVER_DIR}/llvm-goc")
+else()
+  get_target_property(driverdir llvm-goc RUNTIME_OUTPUT_DIRECTORY)
+  set(gollvm_driver "${driverdir}/llvm-goc")
+endif()
 set(gocompiler ${gollvm_driver})
 
 # Pick up any extra Go compiler flags specified via
@@ -272,8 +276,12 @@ set(gensysinfodotgo "${libgo_binroot}/gen-sysinfo.go")
 set(gensysinfotmp "${libgo_binroot}/gen-sysinfo.go.tmp")
 set(gensysinfomacrotmp "${libgo_binroot}/sysinfo.macros.txt")
 set(gensysinfoobject "${libgo_binroot}/sysinfo.o")
-get_target_property(godumpspecdir llvm-godumpspec RUNTIME_OUTPUT_DIRECTORY)
-set(godumpspecexec "${godumpspecdir}/llvm-godumpspec")
+if (GOLLVM_DRIVER_DIR)
+  set(godumpspecexec "${GOLLVM_DRIVER_DIR}/llvm-godumpspec")
+else()
+  get_target_property(godumpspecdir llvm-godumpspec RUNTIME_OUTPUT_DIRECTORY)
+  set(godumpspecexec "${godumpspecdir}/llvm-godumpspec")
+endif()
 set(sysinfoc "${libgo_srcroot}/sysinfo.c")
 set(sysinfoflags ${basedefines})
 list(APPEND sysinfoflags "-I${libgo_binroot}" "-I${libgo_binroot}/runtime")
