add -funwind-tables for rv64
Change-Id: I8bca03f153c8dc61e76dd0638d6cea67f990a388

--- a/libgo/CMakeLists.txt
+++ b/libgo/CMakeLists.txt
@@ -534,6 +534,12 @@ set(baseopts "-g -Wno-zero-length-array ")
 if(GOLLVM_USE_SPLIT_STACK)
   string(APPEND baseopts "-fsplit-stack ")
 endif()
+
+# Unwind tables is used by libgo, but not enable on RISC-V by default.
+if (${goarch} STREQUAL "riscv64")
+  string(APPEND baseopts "-funwind-tables ")
+endif()
+
 foreach(def ${basedefines})
   string(APPEND baseopts "${def} ")
 endforeach()
